[metadata]
name = RPFramework
version = 2.0.0
license = MIT
description = Shared library and framework for creating Indigo Home Automation plugins
long_description = file: README.rst
author = RogueProeliator
author_email = adam.d.ashe@gmail.com
classifiers=
  Development Status :: 5 - Production/Stable

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   pyserial
   requests

[options.packages.find]
where=src
